<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgEditListDialogIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/edit_icon"/>

    <TextView
        android:id="@+id/txtEditItemDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/imgEditListDialogIcon"
        android:layout_toRightOf="@+id/imgEditListDialogIcon"
        android:text="@string/edit"/>

    <EditText
        android:id="@+id/txtEditItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgEditListDialogIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/title"
        android:singleLine="true"
        android:capitalize="sentences"
        />

    <EditText
        android:id="@+id/txtEditItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEditItemTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/description"
        android:singleLine="true"
        android:capitalize="sentences"
        />

    <Spinner
        android:id="@+id/spinnerEditItemPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtEditItemDescription"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>
